# HumanGL

./: .gitignore  Animation.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  Membre.cpp  Membre.hpp  Model.cpp  Model.hpp  Shader.hpp  env.cpp  env.hpp  human.skel  main.cpp  shader.frag  shader.vert  spider.skel
Anims/: idle.anim  jump.anim  kame.anim  spiderwalk.anim  walk.anim
Classes/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Camera.cpp  Camera.hpp  Matrix.cpp  Matrix.hpp  Membre.cpp  Membre.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Skeleton.cpp  Skeleton.hpp  Vec.cpp  Vec.hpp  env.cpp  env.hpp
Shader/: shader.frag  shader.vert
include/: struct.hpp
src/: main.cpp
